# income-distribution-minute-template-creator

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  actions.py  diagnostics.py  extraction.py  main.py  render_checklist.py  render_minute.py  security.py  validation.py  word_ooxml.py
gpt/: conversation_starters.md  custom_gpt_instructions.md  field_dictionary.json  field_dictionary.md  income_distribution_minute_template_creator_instructions.md  income_distribution_minute_template_creator_knowledge_manifest.json
openapi/: income-distribution-minute-template-creator-action.openapi.yaml  trust-deed-review-minute-template-action.openapi.yaml  trust-minute-action.openapi.yaml
schemas/: checklist.schema.json  extraction_result.schema.json  trust_minute.schema.json
scripts/: inventory_templates.py  lint_templates.py  prepare_templates.py  render_docx_smoke_test.py
templates/fieldmaps/: checklist.fieldmap.json  discretionary_minute.fieldmap.json  template_inventory.json  trust_review_checklist.json  unit_minute.fieldmap.json
templates/source/: Discretionary Trust Minute Template (Master) - User Form.docm  Discretionary Trust Minute Template - User Form.docm  README.md  Unit Trust Minute Template (Master) - User Form.docm  Unit Trust Minute Template - User Form.docm
templates/working/: README.md
tests/: conftest.py  test_action_service.py  test_checklist_rendering.py  test_extraction_schema.py  test_file_cleanup.py  test_minute_rendering.py  test_template_inventory.py  test_validation.py
