[project]
name = "income-distribution-minute-template-creator"
version = "0.1.0"
description = "FastAPI action service for Australian trust deed review and income distribution minute template generation."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pypdf>=4.2",
  "PyMuPDF>=1.24",
  "gunicorn>=22",
  "httpx>=0.27"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "jsonschema>=4.22"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
